@startuml

title __MAP's Class Diagram__\n

  namespace  {
    namespace t.polimi.ingsw.client {
      namespace model {
        namespace map {
          class it.polimi.ingsw.client.model.map.CLIclientMap {
              + buildUpdate()
              + moveUpdate()
              + placeUpdate()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.client {
      namespace model {
        namespace map {
          class it.polimi.ingsw.client.model.map.GUImap {
              + GUImap()
          }
        }
      }
    }
  }
  

  it.polimi.ingsw.client.model.map.CLIclientMap -up-|> it.polimi.ingsw.server.model.map.GameMap
  it.polimi.ingsw.client.model.map.GUImap -up-|> it.polimi.ingsw.client.model.map.CLIclientMap


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
